--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
-    "sass": "^1.80.3",
+    "sass": "^1.80.4",
+    "sass-loader": "^16.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
